# mine-fleet

mine-fleet/: .gitignore  README.md  docker-compose.yml
mine-fleet/backend/: .dockerignore  Cargo.toml  Dockerfile
mine-fleet/backend/src/: api.rs  app.rs  health.rs  main.rs  sse.rs  state.rs  types.rs  util.rs
mine-fleet/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
mine-fleet/frontend/src/: App.tsx  types.ts
mine-fleet/frontend/src/components/: DrillDownPanel.test.tsx  DrillDownPanel.tsx  FleetMap.tsx  FleetSummaryPanel.test.tsx  FleetSummaryPanel.tsx  TruckMarker.tsx  markerColors.ts
mine-fleet/frontend/src/hooks/: useFleetSse.test.ts  useFleetSse.ts  useInitialFleet.ts
mine-fleet/frontend/src/lib/: backendUrl.ts
mine-fleet/frontend/src/store/: fleetStore.ts
mine-fleet/frontend/src/test/: resetFleetStore.ts
mine-fleet/simulator/: Dockerfile  package-lock.json  package.json  tsconfig.json
mine-fleet/simulator/src/: index.ts
